--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,20 @@
 <header>
-  <div class="container">
-    <h1><%= link_to "ococo", root_path %></h1>
-    <% if user_signed_in? %>
-      <%= link_to "sign out", destroy_user_session_path, data: { "turbo-method": :delete } %>
-    <% else %>
-      <%= link_to "sign in", new_user_session_path %>
-      <%= link_to "sign up", new_user_registration_path %>
-    <% end %>
-  </div>
+  <nav class="navbar bg-dark navbar-fixed-top" data-bs-theme="dark">
+    <div class="container container-fluid">
+
+      <div class="navbar-brand">
+        <%= link_to "ococo" , root_path %>
+      </div>
+
+      <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+          <li class="nav-item"><%= link_to "sign out" , destroy_user_session_path, data: { "turbo-method": :delete } %></li>
+        <% else %>
+          <li class="nav-item"><%= link_to "sign in" , new_user_session_path %></li>
+          <li class="nav-item"><%= link_to "sign up" , new_user_registration_path %></li>
+        <% end %>
+      </ul>
+
+    </div>
+  </nav>
 </header>
