--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,10 +8,10 @@
 
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-          <li class="nav-item"><%= link_to "sign out" , destroy_user_session_path, data: { "turbo-method": :delete } %></li>
+          <li class="nav-item"><%= link_to t('sign_out', scope: 'users.sessions.destroy') , destroy_user_session_path, data: { "turbo-method": :delete } %></li>
         <% else %>
-          <li class="nav-item"><%= link_to "sign in" , new_user_session_path %></li>
-          <li class="nav-item"><%= link_to "sign up" , new_user_registration_path %></li>
+          <li class="nav-item"><%= link_to t('sign_in', scope: 'users.sessions.new') , new_user_session_path %></li>
+          <li class="nav-item"><%= link_to t('sign_up', scope: 'users.registrations.new') , new_user_registration_path %></li>
         <% end %>
       </ul>
 
