--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 // Custom bootstrap variables must be set or imported *before* bootstrap.
+// @import "bootstrap-sprockets";
 @import "bootstrap";
 
 /* universal */
@@ -16,4 +17,13 @@ textarea {
 
 .center h1 {
   margin-bottom: 10px;
+}
+
+
+/* home */
+.home-bg {
+  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), image-url('home_bg.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
