--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,11 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <% flash.each do |type, message| %>
-      <%= content_tag(:div, message, class: "alert alert-#{type}") %>
-    <% end %>
-    <%= yield %>
+    <div class="container">
+      <% flash.each do |type, message| %>
+        <%= content_tag(:div, message, class: "alert alert-#{type}") %>
+      <% end %>
+      <%= yield %>
+    </div>
   </body>
 </html>
