--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,7 @@
 <header>
-  <nav class="navbar navbar-expand-md bg-body-tertiary" data-bs-theme="dark">
+  <nav class="navbar navbar-expand-md bg-body-tertiary">
     <div class="container container-fluid">
-      <div class="navbar-brand">
-        <%= link_to "ococo" , root_path %>
-      </div>
+      <%= link_to "ococo" , root_path, class: 'navbar-brand' %>
       <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
