--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid p-5 home-bg text-center">
+<div class="container-fluid py-5 home-bg text-center text-white">
   <ul class="list-inline display-1">
     <li class="list-inline-item">🥬</li>
     <li class="list-inline-item">🧂</li>
