Apply bootstrap css to alert

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= render 'layouts/header' %>
     <div class="container">
       <% flash.each do |type, message| %>
-        <%= content_tag(:div, message, class: "alert alert-#{type}") %>
+        <%= content_tag(:div, message, class: "alert alert-#{bootstrap_alert(type)}") %>
       <% end %>
       <%= yield %>
     </div>
