--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,5 @@
+<% profile = @user.profile %>
 <h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<%= image_tag profile.avatar.representation(resize_to_limit: [100, 100]), alt: "#{profile.display_name}のプロフィール画像" %><br>
+display_name<br>
+prefecture<br>
