--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,22 @@
-<% profile = @user.profile %>
-<h1>Users#show</h1>
-<%= image_tag profile.avatar.representation(resize_to_limit: [100, 100]), alt: "#{profile.display_name}のプロフィール画像" %><br>
-<%= profile.display_name %><br>
-<%= profile.prefecture %>
+<% profile=@user.profile %>
+  <h1>Users#show</h1>
+  <div class="container">
+    <div class="row">
+      <div class="profile-card col-md-3 col">
+        <div class="d-flex justify-content-center flex-md-wrap flex-nowrap align-items-md-start align-items-center p-2">
+          <div class="profile-avatar col-md-12 col-6 text-md-center text-end">
+            <%= image_tag profile.avatar.representation(resize_to_limit: [300, 300]), class: 'avatar my-2' ,
+              alt: "#{profile.display_name}のプロフィール画像" %>
+          </div>
+          <div class="profile-body col-md-12 col-6 text-md-center text-start text-break mt-2 ps-md-0 ps-3">
+            <p class="h5">
+              <%= profile.display_name %>
+            </p>
+            <p class="">
+              <%= profile.prefecture %>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
