Show prefectures in Japanese

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
               <%= profile.display_name %>
             </p>
             <p class="">
-              <%= profile.prefecture %>
+              <%= profile.human_attribute_enum(:prefecture) %>
             </p>
           </div>
         </div>
