Improve form layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,9 @@
 
 /* users */
 .users-form {
-  @extend .p-3;
+  @extend .col, .col-xxl-6, .col-xl-7, .col-lg-8, .col-md-9;
+  @extend .mx-3;
+  @extend .px-4, .py-3;
   background-color: $gray-500;
   border-radius: 10px;
 }
