--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-  <div class="col-md-6 users-form">
+  <div class="users-form">
     <h2>
       <%= t('.sign_up') %>
     </h2>
