--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,7 @@
 
 /* users */
 .users-form {
-  @extend .col, .col-xxl-6, .col-xl-7, .col-lg-8, .col-md-9;
+  @extend .col-xxl-6, .col-xl-7, .col-lg-8, .col-md-9;
   @extend .mx-3;
   @extend .px-4, .py-3;
   background-color: $gray-500;
@@ -33,6 +33,10 @@
 
 .users-form input {
   width: 100%;
+}
+
+.users-form input[type="checkbox"] {
+  width: auto;
 }
 
 .users-form .actions input {
