--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,11 +1,12 @@
+<%= render "users/shared/error_messages" , resource: resource %>
+
 <div class="row justify-content-center">
-  <div class="users-form">
+  <div class="col users-form">
     <h2>
       <%= t('.sign_up') %>
     </h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= render "users/shared/error_messages" , resource: resource %>
 
         <div class="field">
           <%= f.label :username %><br />
