--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -21,12 +21,11 @@
       <% end %>
 
       <div class="field">
-        <%= f.label :password %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it') %>)</i><br />
-        <%= f.password_field :password, autocomplete: "new-password" %>
+        <%= f.label :password %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it') %>)</i>
         <% if @minimum_password_length %>
-          <br />
           <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
         <% end %>
+        <%= f.password_field :password, autocomplete: "new-password" %>
       </div>
 
       <div class="field">
@@ -44,9 +43,12 @@
       </div>
     <% end %>
 
-    <h3><%= t('.cancel_my_account') %></h3>
+    <div class="cancel-account my-5">
+      <h2><%= t('.cancel_my_account') %></h2>
 
-    <div><%= t('.unhappy') %> <%= button_to t('.cancel_my_account'), registration_path(resource_name), data: { confirm: t('.are_you_sure'), turbo_confirm: t('.are_you_sure') }, method: :delete %></div>
+      <div><%= t('.unhappy') %> <%= button_to t('.cancel_my_account'), registration_path(resource_name), data: { confirm: t('.are_you_sure'), turbo_confirm: t('.are_you_sure') }, method: :delete,
+                                    class: "btn btn-warning", style: "width: 100%;" %></div>
+    </div>
 
     <%= link_to t('devise.shared.links.back'), :back %>
   </div>
