--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= render 'layouts/header' %>
     <div class="container">
       <% flash.each do |type, message| %>
-        <%= content_tag(:div, message, class: "alert alert-#{bootstrap_alert(type)}") %>
+        <%= content_tag(:div, message, class: "alert alert-#{bootstrap_alert(type)}") if message.class == "String" %>
       <% end %>
       <%= yield %>
       <%= debug(params) if Rails.env.development? %>
