--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,6 +28,7 @@
                 <% end %>
               </p>
             <% end %>
+            <%= link_to t('.edit_profile'), '#' if user_signed_in? && @user.id == current_user.id %>
           </div>
         </div>
       </div>
