Add validation to Profile

--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,3 +1,5 @@
+<%= render "users/shared/error_messages", resource: @profile %>
+
 <div class="row justify-content-center">
   <div class="col users-form">
     <h2>Profile#Edit</h2>
