--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -38,7 +38,10 @@
               <% end %>
               </div>
             <% end %>
-            <%= link_to t('.edit_profile'), edit_profile_path(current_user.id) if user_signed_in? && @user.id == current_user.id %>
+            <% if @user.id == current_user&.id %>
+              <%= link_to t('.edit_profile'), edit_profile_path(current_user.id) %><br>
+              <%= link_to t('.edit_authentication_information'), edit_user_registration_path %>
+            <% end %>
           </div>
         </div>
       </div>
