--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <% if user_signed_in? %>
-            <li class="nav-item"><%= link_to t('visit_current_user_page', scope: 'users'), show_user_path(current_user.username), class: 'nav-link' %></li>
+            <li class="nav-item"><%= link_to t('visit_current_user_page', scope: 'users'), current_user, class: 'nav-link' %></li>
             <li class="nav-item"><%= link_to t('sign_out', scope: 'users.sessions.destroy') , destroy_user_session_path, class: 'nav-link', id: 'sign-out-link', data: { "turbo-method": :delete } %></li>
           <% else %>
             <li class="nav-item"><%= link_to t('sign_in', scope: 'users.sessions.new') , new_user_session_path, class: 'nav-link' %></li>
