--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -48,9 +48,12 @@
       <div class="col-md-9 col">
         <h2><%= t('pickles.show.title', name: profile.display_name) %></h2>
         <%= link_to t('pickles.shared.links.create_pickle'), new_pickle_path, class: 'btn btn-primary' if user_signed_in? %>
-        <div class="pickle-card h3">
-          <%= link_to @user.pickles.first.name, @user.pickles.first %>
-        </div>
+        <% @pickles.each do |pickle| %>
+          <div class="pickle-card h3">
+            <%= link_to pickle.name, pickle %>
+          </div>
+        <% end %>
+        <%= paginate @pickles %>
       </div>
     </div>
   </div>
