--- a/app/views/pickles/show.html.erb
+++ b/app/views/pickles/show.html.erb
@@ -7,22 +7,24 @@
   <% end %>
 </ul>
 
-<h3><%= SauceMaterial.model_name.human %></h3>
-<ul>
-  <% @pickle.sauce_materials.each do |sauce_material| %>
-    <li><%= sauce_material.name %>: <%= sauce_material.quantity %></li>
-  <% end %>
-</ul>
+<% if @pickle.sauce_materials.present? %>
+  <h3><%= SauceMaterial.model_name.human %></h3>
+  <ul>
+    <% @pickle.sauce_materials.each do |sauce_material| %>
+      <li><%= sauce_material.name %>: <%= sauce_material.quantity %></li>
+    <% end %>
+  </ul>
+<% end %>
 
 <% if @pickle.preparation.present? %>
   <h3><%= Pickle.human_attribute_name(:preparation) %></h3>
-  <p><%= @pickle.preparation %></p>
+  <p><%= simple_format @pickle.preparation %></p>
 <% end %>
 
 <h3><%= Pickle.human_attribute_name(:process) %></h3>
-<p><%= @pickle.process %></p>
+<p><%= simple_format @pickle.process %></p>
 
 <% if@pickle.note.present? %>
   <h3><%= Pickle.human_attribute_name(:note) %></h3>
-  <p><%= @pickle.note %></p>
+  <p><%= simple_format @pickle.note %></p>
 <% end %>
