--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,14 +46,16 @@
         </div>
       </div>
       <div class="col-md-9 col">
+        <%= turbo_frame_tag 'pickles-list' do %>
         <h2><%= t('pickles.show.title', name: profile.display_name) %></h2>
         <%= link_to t('pickles.shared.links.create_pickle'), new_pickle_path, class: 'btn btn-primary' if user_signed_in? %>
         <% @pickles.each do |pickle| %>
           <div class="pickle-card h3">
-            <%= link_to pickle.name, pickle %>
+            <%= link_to pickle.name, pickle, data: { turbo_frame: '_top' } %>
           </div>
         <% end %>
         <%= paginate @pickles %>
+        <% end %>
       </div>
     </div>
   </div>
