--- a/app/views/pickles/new.html.erb
+++ b/app/views/pickles/new.html.erb
@@ -18,26 +18,34 @@
     <%= f.label :note %><br />
     <%= f.text_area :note %>
   </div>
-    <%= f.fields_for :ingredients do |fi| %>
-      <div>
-        <%= fi.label :name %><br />
-        <%= fi.text_field :name %>
-      </div>
-      <div>
-        <%= fi.label :quantity %><br />
-        <%= fi.text_field :quantity %>
-      </div>
+  <div data-controller="nested-form">
+    <template data-nested-form-target="template">
+      <%= f.fields_for :ingredients, Ingredient.new, child_index: 'NEW_RECORD' do |ingredient| %>
+        <%= render 'ingredient_fields', form: ingredient %>
+      <% end %>
+    </template>
+    <%= f.fields_for :ingredients do |ingredient| %>
+      <%= render 'ingredient_fields', form: ingredient %>
     <% end %>
-    <%= f.fields_for :sauce_materials do |fs| %>
-      <div>
-        <%= fs.label :name %><br />
-        <%= fs.text_field :name %>
-      </div>
-      <div>
-        <%= fs.label :quantity %><br />
-        <%= fs.text_field :quantity %>
-      </div>
+    <div class="mb-3" data-nested-form-target="links">
+      <%= link_to '材料を追加', '#', class: 'btn btn-primary', data: { action: 'click->nested-form#add_association' } %>
+    </div>
+  </div>
+
+  <div data-controller="nested-form">
+    <template data-nested-form-target="template">
+      <%= f.fields_for :sauce_materials, SauceMaterial.new, child_index: 'NEW_RECORD' do |sauce_material| %>
+        <%= render 'ingredient_fields', form: sauce_material %>
+      <% end %>
+    </template>
+    <%= f.fields_for :sauce_materials do |sauce_material| %>
+      <%= render 'ingredient_fields', form: sauce_material %>
     <% end %>
+    <div class="mb-3" data-nested-form-target="links">
+      <%= link_to '調味料を追加', '#', class: 'btn btn-primary', data: { action: 'click->nested-form#add_association' } %>
+    </div>
+  </div>
+
   <div>
     <%= f.submit t('.create_pickle') %>
   </div>
