--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -46,8 +46,11 @@
     <div class="cancel-account my-5">
       <h2><%= t('.cancel_my_account') %></h2>
 
-      <div><%= t('.unhappy') %> <%= button_to t('.cancel_my_account'), registration_path(resource_name), data: { confirm: t('.are_you_sure'), turbo_confirm: t('.are_you_sure') }, method: :delete,
-                                    class: "btn btn-warning", style: "width: 100%;" %></div>
+      <div>
+        <%= t('.unhappy') %>
+        <%= button_to t('.cancel_my_account'), registration_path(resource_name), data: { turbo_confirm: t('.are_you_sure') }, method: :delete,
+                                                                                 class: "btn btn-danger", style: "width: 100%;" %>
+      </div>
     </div>
 
     <%= link_to t('devise.shared.links.back'), :back %>
