Arrange the layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,6 +61,11 @@
   border-radius: 100%;
 }
 
+.pickle-section {
+  background-color: $gray-200;
+  border-radius: 10px;
+}
+
 /* pickles */
 .pickle-form {
   background-color: $gray-500;
