--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,61 +1,73 @@
 <% profile=@user.profile %>
-  <h1>Users#show</h1>
-  <div class="container">
-    <div class="row">
-      <div class="profile-card col-md-3 col">
-        <div class="d-flex justify-content-center flex-md-wrap flex-nowrap align-items-md-start align-items-center p-2">
-          <div class="profile-avatar col-md-12 col-6 text-md-center text-end">
-            <%= image_tag profile.avatar.representation(resize_to_limit: [300, 300]), class: 'avatar my-2' ,
-              alt: "#{profile.display_name}のプロフィール画像" %>
-          </div>
-          <div class="profile-body col-md-12 col-6 text-md-center text-start text-break mt-2 ps-md-0 ps-3">
-            <p class="h5">
-              <%= profile.display_name %>
-            </p>
-            <p class="">
-              <%= profile.human_attribute_enum(:prefecture) %>
-            </p>
-            <p><%= profile.description %></p>
-            <% if has_any_social_account? %>
-              <div class="d-flex justify-content-md-center gap-2 mb-3">
-                <% if profile.x_username.present? %>
+
+<div class="row row-cols-md-2 row-cols-1 justify-content-center gy-3">
+  <div class="profile-section col-md-3 col">
+    <div class="profile-card p-3">
+      <div class="d-flex justify-content-md-center flex-md-wrap flex-nowrap align-items-md-start align-items-center">
+        <div class="profile-avatar col-md-12 col-auto text-md-center text-end">
+          <%= image_tag profile.avatar.representation(resize_to_limit: [300, 300]), class: 'avatar my-2' ,
+            alt: "#{profile.display_name}のプロフィール画像" %>
+        </div>
+        <div class="profile-body col-md-12 col-auto text-md-center text-start text-break mt-2 ps-md-0 ps-3">
+          <p class="h5">
+            <%= profile.display_name %>
+          </p>
+          <p class="">
+            <%= profile.human_attribute_enum(:prefecture) %>
+          </p>
+          <p>
+            <%= profile.description %>
+          </p>
+          <% if has_any_social_account? %>
+            <div class="d-flex justify-content-md-center gap-2 mb-3">
+              <% if profile.x_username.present? %>
                 <div class="d-inline-block">
-                  <%= link_to "https://twitter.com/#{profile.x_username}", target: '_blank', rel: 'noopener' do %>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16">
-                    <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865l8.875 11.633Z"/>
-                  </svg>
-                  <% end %>
+                  <%= link_to "https://twitter.com/#{profile.x_username}" , target: '_blank' , rel: 'noopener' do %>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                      class="bi bi-twitter-x" viewBox="0 0 16 16">
+                      <path
+                        d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865l8.875 11.633Z" />
+                    </svg>
+                    <% end %>
                 </div>
-              <% end %>
-              <% if profile.ig_username.present? %>
-                <div class="d-inline-block">
-                  <%= link_to "https://instagram.com/#{profile.ig_username}", target: '_blank', rel: 'noopener' do %>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
-                    <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
-                  </svg>
-                  <% end %>
-                </div>
-              <% end %>
-              </div>
+                <% end %>
+                  <% if profile.ig_username.present? %>
+                    <div class="d-inline-block">
+                      <%= link_to "https://instagram.com/#{profile.ig_username}" , target: '_blank' , rel: 'noopener' do %>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                          class="bi bi-instagram" viewBox="0 0 16 16">
+                          <path
+                            d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
+                        </svg>
+                        <% end %>
+                    </div>
+                    <% end %>
+            </div>
             <% end %>
-            <% if @user.id == current_user&.id %>
-              <%= link_to t('.edit_profile'), edit_profile_path(current_user) %><br>
-              <%= link_to t('.edit_authentication_information'), edit_user_registration_path %>
-            <% end %>
-          </div>
+              <% if @user.id==current_user&.id %>
+                <%= link_to t('.edit_profile'), edit_profile_path(current_user) %><br>
+                  <%= link_to t('.edit_authentication_information'), edit_user_registration_path %>
+                    <% end %>
         </div>
       </div>
-      <div class="col-md-9 col">
-        <%= turbo_frame_tag 'pickles-list' do %>
-        <h2><%= t('pickles.show.title', name: profile.display_name) %></h2>
-        <%= link_to t('pickles.shared.links.create_pickle'), new_pickle_path, class: 'btn btn-primary', data: {turbo_frame: '_top' } if user_signed_in? %>
+    </div>
+  </div>
+
+  <div class="content-section col-md-9 col">
+    <div class="pickle-section p-3">
+      <%= turbo_frame_tag 'pickles-list' do %>
+        <h2>
+          <%= t('pickles.show.title', name: profile.display_name) %>
+        </h2>
+        <%= link_to t('pickles.shared.links.create_pickle'), new_pickle_path, class: 'btn btn-primary',
+            data: {turbo_frame: '_top' } if user_signed_in? %>
         <% @pickles.each do |pickle| %>
           <div class="pickle-card h3">
             <%= link_to pickle.name, pickle, data: { turbo_frame: '_top' } %>
           </div>
         <% end %>
         <%= paginate @pickles %>
-        <% end %>
-      </div>
+      <% end %>
     </div>
   </div>
+</div>
