Add log section to user page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -66,6 +66,11 @@
   border-radius: 10px;
 }
 
+.log-section {
+  background-color: $gray-200;
+  border-radius: 10px;
+}
+
 /* pickles */
 .pickle-form {
   background-color: $gray-500;
