--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -69,5 +69,14 @@
         <%= paginate @pickles %>
       <% end %>
     </div>
+
+    <div class="log-section p-3 mt-3">
+      <h2>
+        <%= "#{profile.display_name}の漬け物記録" %>
+      </h2>
+      <p>ほげほげ</p>
+      <p>ふがふが</p>
+      <p>ぴよぴよ</p>
+    </div>
   </div>
 </div>
