--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,12 @@
-<div class="container-fluid py-5 home-bg text-center text-white">
-  <ul class="list-inline display-1">
-    <li class="list-inline-item">🥬</li>
-    <li class="list-inline-item">🧂</li>
-    <li class="list-inline-item">🫙</li>
-    <li class="list-inline-item">📝</li>
-  </ul>
-  <p>ococoは、お漬物の作成記録アプリです。</p>
-  <%= link_to '登録して始める', new_user_registration_path, class: 'btn btn-primary text-nowrap' %>
+<div class="row">
+  <div class="container-fluid py-5 home-bg text-center text-white">
+    <ul class="list-inline display-1">
+      <li class="list-inline-item">🥬</li>
+      <li class="list-inline-item">🧂</li>
+      <li class="list-inline-item">🫙</li>
+      <li class="list-inline-item">📝</li>
+    </ul>
+    <p>ococoは、お漬物の作成記録アプリです。</p>
+    <%= link_to '登録して始める', new_user_registration_path, class: 'btn btn-primary text-nowrap' %>
+  </div>
 </div>
