--- a/app/views/pickles/show.html.erb
+++ b/app/views/pickles/show.html.erb
@@ -1,38 +1,49 @@
-<h2><%= @pickle.name %></h2>
+<div class="pickle-section">
+  <h2><%= @pickle.name %></h2>
 
-<div class="ingredients">
-  <h3><%= Ingredient.model_name.human %></h3>
-<ul>
-  <% @pickle.ingredients.each do |ingredient| %>
-    <li><%= ingredient.name %>: <%= ingredient.quantity %></li>
-  <% end %>
-</ul>
-</div>
-
-<% if @pickle.sauce_materials.present? %>
-  <div class="sauce-materials">
-    <h3><%= SauceMaterial.model_name.human %></h3>
+  <div class="ingredients">
+    <h3><%= Ingredient.model_name.human %></h3>
   <ul>
-    <% @pickle.sauce_materials.each do |sauce_material| %>
-      <li><%= sauce_material.name %>: <%= sauce_material.quantity %></li>
+    <% @pickle.ingredients.each do |ingredient| %>
+      <li><%= ingredient.name %>: <%= ingredient.quantity %></li>
     <% end %>
   </ul>
   </div>
-<% end %>
 
-<% if @pickle.preparation.present? %>
-  <h3><%= Pickle.human_attribute_name(:preparation) %></h3>
-  <p><%= simple_format @pickle.preparation %></p>
-<% end %>
+  <% if @pickle.sauce_materials.present? %>
+    <div class="sauce-materials">
+      <h3><%= SauceMaterial.model_name.human %></h3>
+    <ul>
+      <% @pickle.sauce_materials.each do |sauce_material| %>
+        <li><%= sauce_material.name %>: <%= sauce_material.quantity %></li>
+      <% end %>
+    </ul>
+    </div>
+  <% end %>
 
-<h3><%= Pickle.human_attribute_name(:process) %></h3>
-<p><%= simple_format @pickle.process %></p>
+  <% if @pickle.preparation.present? %>
+    <h3><%= Pickle.human_attribute_name(:preparation) %></h3>
+    <p><%= simple_format @pickle.preparation %></p>
+  <% end %>
 
-<% if@pickle.note.present? %>
-  <h3><%= Pickle.human_attribute_name(:note) %></h3>
-  <p><%= simple_format @pickle.note %></p>
-<% end %>
+  <h3><%= Pickle.human_attribute_name(:process) %></h3>
+  <p><%= simple_format @pickle.process %></p>
 
-<% if @pickle.user.id == current_user&.id %>
-  <%= link_to t('pickles.shared.links.edit_pickle'), edit_pickle_path(@pickle) %>
-<% end %>
+  <% if@pickle.note.present? %>
+    <h3><%= Pickle.human_attribute_name(:note) %></h3>
+    <p><%= simple_format @pickle.note %></p>
+  <% end %>
+
+  <% if @pickle.user.id == current_user&.id %>
+    <%= link_to t('pickles.shared.links.edit_pickle'), edit_pickle_path(@pickle) %>
+  <% end %>
+</div>
+
+<div class="journal-section">
+  <% if @pickle.user.id == current_user&.id %>
+    <%= render 'journals/form', journal: @journal %>
+  <% end %>
+  <% @pickle.journals.each do |journal| %>
+    <%= render 'journals/journal', journal: journal %>
+  <% end %>
+</div>
