--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -70,7 +70,7 @@
       <% end %>
     </div>
 
-    <div class="log-section p-3 mt-3">
+    <div class="journal-section p-3 mt-3">
       <h2>
         <%= "#{profile.display_name}の漬け物記録" %>
       </h2>
