--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,16 @@
   </head>
 
   <body>
-    <%= render 'layouts/header' %>
-    <div class="container">
+    <header>
+      <%= render 'layouts/header' %>
+    </header>
+    <main class="container">
       <% flash.each do |type, message| %>
         <% next if type == 'timedout' %>
         <%= content_tag(:div, message, class: "alert alert-#{bootstrap_alert(type)}") %>
       <% end %>
       <%= yield %>
       <%= debug(params) if Rails.env.development? %>
-    </div>
+    </>
   </body>
 </html>
