--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,12 @@
 
   <body>
     <header>
-      <%= render 'layouts/header' %>
+      <%= render 'header' %>
     </header>
     <main class="container">
-      <% flash.each do |type, message| %>
-        <% next if type == 'timedout' %>
-        <%= content_tag(:div, message, class: "alert alert-#{bootstrap_alert(type)}") %>
-      <% end %>
+      <div id="flash">
+        <%= render 'flash' %>
+      </div>
       <%= yield %>
       <%= debug(params) if Rails.env.development? %>
     </>
