Implement posting journals on pickle pages

--- a/app/views/journals/new.html.erb
+++ b/app/views/journals/new.html.erb
@@ -1,6 +1,8 @@
 <h1>New journal</h1>
 
-<%= render "form", journal: @journal %>
+<%= turbo_frame_tag 'new_journal' do %>
+  <%= render 'journals/form', journal: @journal %>
+<% end %>
 
 <br>
 
