--- a/app/views/journals/_form.html.erb
+++ b/app/views/journals/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: journal) do |form| %>
+<%= form_with(model: journal, class: 'journal-form') do |form| %>
   <% if journal.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(journal.errors.count, "error") %> prohibited this journal from being saved:</h2>
@@ -11,10 +11,7 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :pickle_id, style: "display: block" %>
-    <%= form.text_field :pickle_id %>
-  </div>
+  <%= form.hidden_field :pickle_id, value: journal.pickle.id %>
 
   <div>
     <%= form.label :body, style: "display: block" %>
