Check authorization on edit and destroy

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -58,8 +58,10 @@
       <h2>
         <%= t('pickles.show.title', name: profile.display_name) %>
       </h2>
-      <%= link_to t('pickles.shared.links.create_pickle'), new_pickle_path, class: 'btn btn-primary',
-          data: {turbo_frame: '_top' } if user_signed_in? %>
+      <% if @user.id == current_user&.id %>
+        <%= link_to t('pickles.shared.links.create_pickle'), new_pickle_path, class: 'btn btn-primary',
+            data: {turbo_frame: '_top' } %>
+      <% end %>
       <%= turbo_frame_tag 'pickles-list' do %>
         <% @pickles.each do |pickle| %>
           <div class="pickle-card h3">
