--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -45,7 +45,7 @@
             </div>
             <% end %>
               <% if @user.id==current_user&.id %>
-                <%= link_to t('.edit_profile'), edit_profile_path(current_user) %><br>
+                <%= link_to t('.edit_profile'), edit_profile_path %><br>
                   <%= link_to t('.edit_authentication_information'), edit_user_registration_path %>
                     <% end %>
         </div>
