--- a/app/views/journals/index.html.erb
+++ b/app/views/journals/index.html.erb
@@ -5,10 +5,6 @@
 <div id="journals">
   <% @journals.each do |journal| %>
     <%= render journal %>
-    <p>
-      <%= link_to "Show this journal", journal %>
-    </p>
   <% end %>
+  <%= paginate @journals %>
 </div>
-
-<%= link_to "New journal", new_journal_path %>
