Hide link to the pickle in journals on a pickle page

--- a/app/views/journals/_journal.html.erb
+++ b/app/views/journals/_journal.html.erb
@@ -20,9 +20,11 @@
       <% end %>
     </div>
     <div class="journal-body">
-      <div class="pickle-link">
-        <%= link_to journal.pickle.name, pickle_path(journal.pickle), data: { turbo_frame: '_top' } %>
-      </div>
+      <% unless request.path == pickle_path(journal.pickle) || request.method != 'GET' %>
+        <div class="pickle-link">
+          <%= link_to journal.pickle.name, pickle_path(journal.pickle), data: { turbo_frame: '_top' } %>
+        </div>
+      <% end %>
       <%= journal.body %>
     </div>
   </div>
