--- a/app/views/journals/_journal.html.erb
+++ b/app/views/journals/_journal.html.erb
@@ -20,7 +20,7 @@
       <% end %>
     </div>
     <div class="journal-body">
-      <% unless request.path == pickle_path(journal.pickle) || request.method != 'GET' %>
+      <% unless request.path == pickle_path(journal.pickle) || request.get? == false %>
         <div class="pickle-link">
           <%= link_to journal.pickle.name, pickle_path(journal.pickle), data: { turbo_frame: '_top' } %>
         </div>
