--- a/app/views/journals/create.turbo_stream.erb
+++ b/app/views/journals/create.turbo_stream.erb
@@ -1,5 +1,5 @@
 <%= turbo_stream.prepend 'journals', @journal %>
 
-<%= turbo_stream.update Journal.new, partial: 'form', locals: { journal: Journal.new(pickle_id: @journal.pickle_id) } %>
+<%= turbo_stream.update Journal.new, partial: 'form', locals: { journal: Journal.new(pickle_id: @journal.pickle_id), pickles: current_user.pickles} %>
 
 <%= turbo_stream.update 'flash', partial: 'flash' %>
