--- a/app/views/journals/new.html.erb
+++ b/app/views/journals/new.html.erb
@@ -1,7 +1,7 @@
 <h1>New journal</h1>
 
 <%= turbo_frame_tag 'new_journal' do %>
-  <%= render 'journals/form', journal: @journal %>
+  <%= render 'journals/form', journal: @journal, pickles: pickles %>
 <% end %>
 
 <br>
