--- a/app/views/journals/_journal.html.erb
+++ b/app/views/journals/_journal.html.erb
@@ -1,29 +1,31 @@
 <% profile = journal.user.profile %>
-<div id="<%= dom_id journal %>" class="journal-card my-2">
+<div id="<%= dom_id journal %>" class="journal-card">
   <div class="journal-avatar">
     <%= image_tag profile.avatar.variant(:thumb), class: 'avatar' ,
-    alt: "#{profile.display_name}のプロフィール画像" %>
+                                                  alt: "#{profile.display_name}のプロフィール画像" %>
   </div>
   <div class="journal-content">
-    <div class="journal-head">
-      <div>
+    <div class="journal-header">
+      <div class="me-auto">
         <%= profile.display_name %>
       </div>
-      <div>
+      <div class="ms-auto">
         <%= time_ago_in_words journal.created_at %>
       </div>
       <% if journal.user.id == current_user&.id %>
-        <div>
-          <%= button_to t('journals.shared.destroy_journal'), journal_path(journal), form: { data: { turbo_confirm: t('journals.shared.confirm') } },
-                                                                                      method: :delete, class: 'btn btn-danger btn-sm' %>
+        <div class="">
+          <%= button_to journal_path(journal), form: { data: { turbo_confirm: t('journals.shared.confirm') } }, method: :delete,
+                                               class: 'button-destroy-journal' do %>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+              <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
+            </svg>
+          <% end %>
         </div>
       <% end %>
     </div>
     <div class="journal-body">
       <% unless request.path == pickle_path(journal.pickle) || request.post? && request.referer.include?(pickle_path(journal.pickle)) %>
-        <div class="pickle-link">
-          <%= link_to journal.pickle.name, pickle_path(journal.pickle), data: { turbo_frame: '_top' } %>
-        </div>
+        <%= link_to journal.pickle.name, pickle_path(journal.pickle), data: { turbo_frame: '_top' }, class: 'pickle-link' %>
       <% end %>
       <%= journal.body %>
     </div>
