--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <%= render "users/shared/error_messages" , resource: resource %>
 
 <div class="row justify-content-center">
-  <div class="col users-form">
+  <div class="col devise-form">
     <h2>
       <%= t('.sign_up') %>
     </h2>
