--- a/app/views/users/unlocks/new.html.erb
+++ b/app/views/users/unlocks/new.html.erb
@@ -1,7 +1,7 @@
 <%= render "users/shared/error_messages", resource: resource %>
 
 <div class="row justify-content-center">
-  <div class="col users-form">
+  <div class="col devise-form">
     <h2><%= t('.resend_unlock_instructions') %></h2>
 
     <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
